Mon Mar 24 22:30:00 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/transform.c libxslt/variables.c:
	  Result Value Tree are now generated with a document root node
	  not an element, it's quite cleaner.
	* configure.in libxslt.spec.in NEWS: But this requires libxml2-2.5.5
	  also prepared for libxslt-1.0.28 release
	* doc/*: updated and regenerated the docs

Mon Mar 24 15:01:07 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c libxslt/transform.c libxslt/variables.c:
	  Finally fixed bug #75813, processing or Result Value Tree 
	  converted into node-sets should be a bit more sensible now.
	* tests/exslt/common/node-set.2.out: the associated fix in libxml2
	  fixes this regression test, there is 4 nodes, not 3
	* tests/docs/Makefile.am tests/docs/bug-111.*
	  tests/general/Makefile.am tests/general/bug-111*: added an
	  example in the regression tests for bug #75813
	
Sun Mar 23 13:09:17 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-110.*
	  tests/general/Makefile.am tests/general/bug-110*: added an
	  example in the regression tests for bug #108976 which is
	  fixed in libxml2

Sat Mar 22 12:35:47 CET 2003 Daniel Veillard <daniel@veillard.com>

	* tests/docs/Makefile.am tests/docs/bug-109.xml
	  tests/general/Makefile.am tests/general/bug-109*: added an
	  example in the regression tests for the invalid bug #108716

Sat Mar 22 12:01:24 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/variables.c: fixed bug #108633 reported by
	  Jerome Pesenti about recursive global variables/param detections
	* tests/reports/Makefile.am tests/reports/rec*: added regression
	  tests for the checking of recusion in global/local param/variables.

Fri Mar  7 16:08:24 CET 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/numbers.c: valgrind pointed out an uninitialized
	  variable use in format-number()

Fri Mar  7 15:27:56 CET 2003 Daniel Veillard <daniel@veillard.com>
