@@ -401,6 +401,7 @@ if test "${LOGNAME}" = "veillard" -a "`pwd`" = "/u/veillard/XSLT" ; then
     LIBXML_LIBS="../../XML/.libs/libxml2.a -lz"
     DV_LINK="1"
     XSLTPROCDV="xsltproc.dv"
+    INSTALLED_XSLT_LIB=""
    # PYTHONSODV="libxsltmod.so.dv"
 fi
 
